--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Exercise 3</title>
+<meta charset="UTF-8">
+<title>Members</title>
 <script type="text/javascript" src="script/ajax.js"></script>
 </head>
 <body>
