--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,11 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Members</title>
-<script type="text/javascript" src="script/ajax.js"></script>
+<script type="text/javascript" src="script/ajax/ajax.js"></script>
+<script type="text/javascript" src="script/ajaxcomm.js"></script>
+<script type="text/javascript" src="script/config.js"></script>
+<script type="text/javascript" src="script/tableui.js"></script>
 </head>
 <body>
 	<h1>Members</h1>
-	<table>
+	<table id="tElm">
 		<tr>
 			<th>Firstname</th>
 			<th>Lastname</th>
