litt for mye her som ikke funker, satser på annen løsning

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="script/ajax/ajax.js"></script>
 <script type="text/javascript" src="script/ajaxcomm.js"></script>
 <script type="text/javascript" src="script/config.js"></script>
+<script type="text/javascript" src="script/tableactions.js"></script>
 <script type="text/javascript" src="script/tableui.js"></script>
 </head>
 <body>
