--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,24 +1,64 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <meta charset="UTF-8">
 <title>Members</title>
+<script type="text/javascript" src="script/config.js"></script>
 <script type="text/javascript" src="script/ajax/ajax.js"></script>
 <script type="text/javascript" src="script/ajaxcomm.js"></script>
-<script type="text/javascript" src="script/config.js"></script>
-<script type="text/javascript" src="script/tableactions.js"></script>
 <script type="text/javascript" src="script/tableui.js"></script>
+<script type="text/javascript" src="script/controller.js"></script>
+<script type="text/javascript" src="script/onLoad.js"></script>
+<style>
+	th {
+		text-align: left;
+	}
+</style>
 </head>
+
 <body>
-	<h1>Members</h1>
-	<table id="tElm">
+	<h1>Medlemmer</h1>
+	<table id="memberList">
 		<tr>
-			<th>Firstname</th>
-			<th>Lastname</th>
-			<th>Address</th>
-			<th>Phone</th>
-		</tr> 
+			<th>Fornavn</th>
+			<th>Etternavn</th>
+			<th>Adresse</th>
+			<th>Telefon</th>
+			<th></th>
+			<th></th>
+		</tr>
 	</table>
-	<button id="add">Add member</button>
+	<input id="memberAdd" type="button" value="Legg til medlem" />
+
+	<br />
+	<br />
+
+	<div id="memberEdit" style="display: none">
+		<table>
+			<tr>
+				<td><b>Fornavn:</b></td>
+				<td><input type="text" id="fName" /></td>
+			</tr>
+			<tr>
+				<td><b>Etternavn:</b></td>
+				<td><input type="text" id="lName" /></td>
+			</tr>
+			<tr>
+				<td><b>Adresse:</b></td>
+				<td><input type="text" id="address" /></td>
+			</tr>
+			<tr>
+				<td><b>Telefon:</b></td>
+				<td><input type="number" id="phone" /></td>
+			</tr>
+		</table>
+
+		<p id="errorMsg" style="color: red"></p>
+		<input id="sendMember" type="button" value="Send" />
+		<input id="cancel" type="button" value="Avbryt" />
+
+	</div>
+
 </body>
 </html>
